# purpleproxy

./: .gitignore  Cargo.toml  Makefile  build.rs  config.rs  genstub.py  init.c  init.c++  init.h  proxy.capnp  purpleproxy.h  server.c++  stubs.toml  stubs.yaml  types.capnp
codegen/: config.py  gencapnp.py  translation.py
codegen/cpp/: genstub.py
codegen/rs/: genstub.py
purple-protos/: .gitignore  Makefile  Makefile.llvm34  protos.cpp  purple.sh
src/: lib.rs  stubs.rs
